--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,19 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "removeComments": true,  /* Do not emit comments to output. */
+
+    /* Strict Type-Checking Options */        
+    "noImplicitAny": true,    /* Raise error on expressions and declarations with an implied 'any' type. */
+    "strictNullChecks": true, /* Enable strict null checks. */
+    "noImplicitThis": true,   /* Raise error on 'this' expressions with an implied 'any' type. */
+    "alwaysStrict": true,     /* Parse in strict mode and emit "use strict" for each source file. */
+   
+    /* Additional Checks */                   
+    "noUnusedLocals": true,   /* Report errors on unused locals. */
+    "noUnusedParameters": true,  /* Report errors on unused parameters. */
+   
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
