--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,8 +32,8 @@
     "alwaysStrict": true,     /* Parse in strict mode and emit "use strict" for each source file. */
    
     /* Additional Checks */                   
-    "noUnusedLocals": true,   /* Report errors on unused locals. */
-    "noUnusedParameters": true,  /* Report errors on unused parameters. */
+    // "noUnusedLocals": true,   /* Report errors on unused locals. */
+    // "noUnusedParameters": true,  /* Report errors on unused parameters. */
    
   },
   "angularCompilerOptions": {
